--- a/src/Components/Spinner/Spinner.css
+++ b/src/Components/Spinner/Spinner.css
@@ -5,7 +5,7 @@
 }
 
 .loader {
-    color: #d70f64;
+    color: rgb(193, 224, 138);
     font-size: 11px;
     text-indent: -99999em;
     margin: 55px auto;
